--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -79,11 +79,14 @@
 </nav>
 <!-- /navbar -->
 
+<div id="content">
 {% block content %}
 
 {% endblock content %}
- <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
- <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+</div>
+<div id="footer">Footer</div>
+
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 {% javascript 'contrib' %}
 
 {% block extra_js %}
