work on detail pages and map

--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -15,7 +15,7 @@
 <body>
 
 <!-- navbar -->
-<nav class="top-bar" data-topbar role="navigation">
+<nav class="top-bar" id="topmenu" data-topbar role="navigation">
     <ul class="title-area">
         <li class="name">
             <h1>
