--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -84,6 +84,7 @@
 <div id="footer">Footer</div>
 
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 {% javascript 'contrib' %}
 
 {% block extra_js %}
