--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title%} Crop Alert {% endblock title%}</title>
+    <title>{% block title%} Save My Crops {% endblock title%}</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
