--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+<div id="page-wrapper">
 <!-- navbar -->
 <nav class="top-bar" id="topmenu" data-topbar role="navigation">
     <ul class="title-area">
@@ -77,7 +77,9 @@
 
 {% endblock content %}
 </div>
-<div id="footer">Footer</div>
+
+<div id="footer">Copyright © 2015 savemycrops.com</div>
+</div> <!-- End page wrapper -->
 
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
