add mobile app page, recenter the map, reposition circle div

--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -53,6 +53,10 @@
             </li>
             <li class="divider"></li>
             {% endif %}
+            <li>
+                <a href="{% url 'mobile-app' %}">MOBILE APP</a>
+            </li>
+            <li class="divider"></li>
         </ul>
         <!-- Right Nav Section -->
         <ul class="right">
