work on homepage and logo

--- a/django_project/core/base_templates/base.html
+++ b/django_project/core/base_templates/base.html
@@ -22,7 +22,10 @@
         <li class="name">
             <h1>
                 <!-- <a href="/"><img src="/static/img/logo.png" ></a> -->
-                <a href="/">Crop Alert Logo</a>
+                <a href="/" style="font-weight: bold;">
+                    <img src="{{STATIC_URL}}img/corn.png" style="width: 25px; height:25px;margin-top:-5px;">
+                    SAVE MY CROPS
+                </a>
             </h1>
         </li>
         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
